--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import SimpleTile from "../components/Stream/SimpleTile.svelte";
 import Test from "../components/Stream/Test.svelte";
 const urls = [
     // "ws://18.218.162.33:8082/api/ws?src=hiolz776f44s7me&nodeID=1&cn=nvrCam%2034",
-    "ws://18.221.34.208:8081/api/ws?src=h2c3j3kn1erul8y",
+    "wss://18.221.34.208:8081/api/ws?src=h2c3j3kn1erul8y",
     "ws://18.221.34.208:8080/api/ws?src=h2c3j3kn1erul8y",
     // "ws://18.218.162.33:8082/api/ws?src=yb2e1nm0e0u82tj&nodeID=1&cn=nvrCam%2033",
     // "ws://18.218.162.33:8082/api/ws?src=wcbn9g1sqgz04l4&nodeID=1&cn=nvrCam%2028",
