--- a/src/pages/playback.astro
+++ b/src/pages/playback.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Playback | LENS View">
-    <span class="text-4xl">Playback</span>
+<Layout title="Playback | LENS View" topbar>
+  <span class="text-4xl">Playback</span>
 </Layout>
