--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,19 @@
 ---
-import "@/styles/globals.css";
+import PocketBase from "pocketbase";
+
 import Layout from "../layouts/Layout.astro";
+import NodeManager from "@/managers/Node.svelte";
 import CameraList from "../components/Sidebar/CameraList.svelte";
 import QuickActions from "../components/Sidebar/QuickActions.svelte";
 import StreamManager from "../components/Stream/StreamManager.svelte";
+import CameraManager from "@/managers/Camera.svelte";
+import UserManager from "@/managers/User.svelte";
+import { Toaster } from "@/components/ui/sonner";
 ---
 
-<Layout title="LENS View">
-  <div class="flex" style="height: calc(100vh - 3rem);">
-    <StreamManager client:only="svelte" />
-    <section class="flex flex-row" style="width: 25%;">
-      <CameraList client:only="svelte" />
-      <QuickActions client:only="svelte" />
-    </section>
-  </div>
+<Layout title="LENS View" topbar>
+  <Toaster client:only="svelte" richColors />
+  <UserManager client:only="svelte" />
+  <!-- <NodeManager client:only="svelte" /> -->
+  <CameraManager client:only="svelte" />
 </Layout>
