--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,6 @@ import { Toaster } from "@/components/ui/sonner";
 <Layout title="LENS View" topbar>
   <Toaster client:only="svelte" richColors />
   <UserManager client:only="svelte" />
-  <!-- <NodeManager client:only="svelte" /> -->
+  <NodeManager client:only="svelte" />
   <CameraManager client:only="svelte" />
 </Layout>
