--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,9 @@ import PocketBase from "pocketbase";
 
 import Layout from "../layouts/Layout.astro";
 import NodeManager from "@/managers/Node.svelte";
-import CameraList from "../components/Sidebar/CameraList.svelte";
-import QuickActions from "../components/Sidebar/QuickActions.svelte";
-import StreamManager from "../components/Stream/StreamManager.svelte";
 import CameraManager from "@/managers/Camera.svelte";
 import UserManager from "@/managers/User.svelte";
+import LiveManager from "@/managers/Live.svelte";
 import { Toaster } from "@/components/ui/sonner";
 ---
 
@@ -16,4 +14,5 @@ import { Toaster } from "@/components/ui/sonner";
   <UserManager client:only="svelte" />
   <NodeManager client:only="svelte" />
   <CameraManager client:only="svelte" />
+  <LiveManager client:only="svelte" />
 </Layout>
