--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,3 +65,95 @@ const { title, topbar = false } = Astro.props;
 		</script> -->
   </body>
 </html>
+
+<style>
+  /* Lato Regular */
+  @font-face {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 400;
+    src: url("../fonts/lato/Lato-Regular.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Bold */
+  @font-face {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 700;
+    src: url("../fonts/lato/Lato-Bold.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Bold Italic */
+  @font-face {
+    font-family: "Lato";
+    font-style: italic;
+    font-weight: 700;
+    src: url("../fonts/lato/Lato-BoldItalic.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Light */
+  @font-face {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 300;
+    src: url("../fonts/lato/Lato-Light.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Light Italic */
+  @font-face {
+    font-family: "Lato";
+    font-style: italic;
+    font-weight: 300;
+    src: url("../fonts/lato/Lato-LightItalic.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Thin */
+  @font-face {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 100;
+    src: url("../fonts/lato/Lato-Thin.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Thin Italic */
+  @font-face {
+    font-family: "Lato";
+    font-style: italic;
+    font-weight: 100;
+    src: url("../fonts/lato/Lato-ThinItalic.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Italic */
+  @font-face {
+    font-family: "Lato";
+    font-style: italic;
+    font-weight: 400;
+    src: url("../fonts/lato/Lato-Italic.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Black */
+  @font-face {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 900;
+    src: url("../fonts/lato/Lato-Black.ttf") format("truetype");
+    font-display: swap;
+  }
+
+  /* Lato Black Italic */
+  @font-face {
+    font-family: "Lato";
+    font-style: italic;
+    font-weight: 900;
+    src: url("../fonts/lato/Lato-BlackItalic.ttf") format("truetype");
+    font-display: swap;
+  }
+</style>
