--- a/src/pages/playback.astro
+++ b/src/pages/playback.astro
@@ -1,7 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import PlaybackVideo from "../managers/Playback.svelte";
 ---
 
 <Layout title="Playback | LENS View" topbar>
   <span class="text-4xl">Playback</span>
+  <PlaybackVideo client:only="svelte" />
 </Layout>
