dont push ts files

--- a/src/pages/playback.astro
+++ b/src/pages/playback.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import PlaybackVideo from "../managers/Playback.svelte";
+import PlaybackVideo from "../managers/Playback2.svelte";
 ---
 
 <Layout title="Playback | LENS View" topbar>
