--- a/src/pages/playback.astro
+++ b/src/pages/playback.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import NewPlayback from "@/managers/new-playback.svelte";
+import TestPlayback from "@/managers/test.svelte";
 ---
 
 <Layout title="Playback | LENS View" topbar>
   <NewPlayback client:only="svelte" />
+  <!-- <TestPlayback client:only="svelte" /> -->
 </Layout>
