--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import LiveManager from "@/managers/Live.svelte";
+import UserManager from "@/managers/User.svelte";
+
 ---
 
 <Layout title="LENS View" topbar>
   <LiveManager client:only="svelte" />
+  <UserManager client:only="svelte" />
 </Layout>
