--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -24,7 +24,7 @@ import Layout from "@/layouts/Layout.astro";
       >
         <h2 class="font-medium text-2xl sm:self-start">Register</h2>
         <p class="text-[#919EAB] text-sm sm:self-start pb-4">
-          Please enter your details to register on LENS View.
+          Please enter your details to log into VMS portal.
         </p>
         <RegisterForm client:only="svelte" />
       </div>
