--- a/src/components/ui/logo/Logo.astro
+++ b/src/components/ui/logo/Logo.astro
@@ -3,8 +3,7 @@
 ---
 
 <div class="flex items-center space-x-1 justify-around">
-  <img src="./images/Lens_2.svg" alt="LENS View Logo" class="h-8 dark:hidden" />
-  <img src="./images/green.svg" alt="LENS View Logo" class="h-8 dark:hidden" />
+  <img src="./images/Logo.svg" alt="LENS View Logo" class="h-8 dark:hidden" />
   <img
     src="./images/lens_white.svg"
     alt="LENS View Logo"
