done with tech5

--- a/src/components/ui/logo/Logo.astro
+++ b/src/components/ui/logo/Logo.astro
@@ -3,15 +3,5 @@
 ---
 
 <div class="flex items-center space-x-1 justify-around">
-  <img src="./images/Logo.svg" alt="LENS View Logo" class="h-8 dark:hidden" />
-  <img
-    src="./images/lens_white.svg"
-    alt="LENS View Logo"
-    class="h-8 hidden dark:block"
-  />
-  <img
-    src="./images/white.svg"
-    alt="LENS View Logo"
-    class="h-8 hidden dark:block"
-  />
+  <img src="./images/Logo.svg" alt="LENS View Logo" class="h-8" />
 </div>
