--- a/src/pages/playback.astro
+++ b/src/pages/playback.astro
@@ -4,7 +4,7 @@ import NewPlayback from "@/managers/new-playback.svelte";
 import TestPlayback from "@/managers/test.svelte";
 ---
 
-<Layout title="Playback | LENS View" topbar>
+<Layout title="Playback | Tech 5" topbar>
   <NewPlayback client:only="svelte" />
   <!-- <TestPlayback client:only="svelte" /> -->
 </Layout>
