--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -5,7 +5,7 @@ import { Toaster } from "@/components/ui/sonner";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="LENS View" topbar={false}>
+<Layout title="Tech5" topbar={false}>
   <div
     class="flex justify-center items-center w-full h-screen relative flex-col sm:flex-row overflow-hidden"
   >
@@ -22,7 +22,7 @@ import Layout from "@/layouts/Layout.astro";
       <div
         class="form-cont flex flex-col h-full items-center justify-center gap-4 w-[350px] mx-auto scale-[.85] sm:scale-100 xl:scale-100 2xl:scale-125 lg:scale-90 md:scale-75"
       >
-        <!-- <div
+        <div
         class="flex items-center justify-center sm:justify-start sm:self-start gap-4 -ml-4"
       >
         <img
@@ -30,16 +30,16 @@ import Layout from "@/layouts/Layout.astro";
           alt="logo"
           height={80}
           width={140}
-          class="hidden dark:block"
+          class="hidden"
         />
         <img
-          src={"/images/green.svg"}
+          src={"/images/Logo.svg"}
           alt="logo"
           height={80}
           width={140}
-          class="block dark:hidden"
+          class=""
         />
-      </div> -->
+      </div>
 
         <h2 class="font-medium text-2xl sm:self-start ]">Login</h2>
         <p class="text-[#919EAB] text-sm sm:self-start pb-4">
