--- a/src/components/Topbar/Topbar.astro
+++ b/src/components/Topbar/Topbar.astro
@@ -3,11 +3,12 @@ import UserProfile from "@/components/UserProfile/UserProfile.svelte";
 import Logo from "../ui/logo/Logo.astro";
 const navLinks = [
   { name: "Live", href: "/" },
-  { name: "Playback", href: "/playback" },
-  { name: "Events", href: "/events" },
-  { name: "Gallery", href: "/gallery" },
-  { name: "Configuration", href: "/configuration" },
-  { name: "Reports", href: "/reports" },
+//   { name: "Playback", href: "/playback" },
+//   { name: "Events", href: "/events" },
+//   { name: "Gallery", href: "/gallery" },
+//   { name: "Configuration", href: "/configuration" },
+//   { name: "Reports", href: "/reports" },
+// ];
 ];
 ---
 
