--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -5,7 +5,7 @@ import { Toaster } from "@/components/ui/sonner";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Tech5" topbar={false}>
+<Layout title="Vehant" topbar={false}>
   <div
     class="flex justify-center items-center w-full h-screen relative flex-col sm:flex-row overflow-hidden"
   >
