--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import UserManager from "@/managers/User.svelte";
 
 ---
 
-<Layout title="Tech 5" topbar>
+<Layout title="Vehant" topbar>
   <LiveManager client:only="svelte" />
   <UserManager client:only="svelte" />
 </Layout>
