--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -5,7 +5,7 @@ import Logo from "@/components/ui/logo/Logo.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Tech 5" topbar={false}>
+<Layout title="Vehant" topbar={false}>
   <div
     class="flex justify-center items-center w-full h-screen relative flex-col sm:flex-row overflow-hidden"
   >
